--- a/main/templates/notes.html
+++ b/main/templates/notes.html
@@ -37,6 +37,10 @@
       </li>
 
     </nav>
+    <nav class="flex-around">
+      <span>Desk</span>
+      <span>Drawer</span>
+    </nav>
   </header>
   <div id="notes-sections">
     <div class="note-section">
