--- a/main/templates/notes.html
+++ b/main/templates/notes.html
@@ -38,8 +38,8 @@
 
     </nav>
     <nav class="flex-around">
-      <span>Desk</span>
-      <span>Drawer</span>
+      <a href="/notes">Desk</a>
+      <a href="/drawerView">Drawer</a>
     </nav>
   </header>
   <div id="notes-sections">
