--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -520,3 +520,8 @@ form {
   display: flex;
   justify-content: space-around;
 }
+
+.drawerView-note-open {
+    border-top: 4px solid #F18A60;
+    background: #eee;
+}
