--- a/main/templates/notes.html
+++ b/main/templates/notes.html
@@ -102,7 +102,7 @@
           <a href="/editMode/true" class="button-primary">New Note</a>
         </li>
         <li>
-          <a href="/open/-">Open random note</a>
+          <a href="/open/-/notes">Open random note</a>
         </li>
         <li>
           <a href="/closeNotes">Close all notes</a>
