--- a/main/templates/widgets/note.html
+++ b/main/templates/widgets/note.html
@@ -14,7 +14,7 @@
 
     <div class="note-topbar">
       <h2 class="single-note-title">{{ parentnote.title }}</h2>
-      <a href="/close/{{ parentnote.id }}">X</a>
+      <a href="/close/{{ parentnote.id }}/notes">X</a>
     </div>
 
     {% load markdown %}
