--- a/main/templates/widgets/noteTitle.html
+++ b/main/templates/widgets/noteTitle.html
@@ -1,5 +1,5 @@
 <li class="note-list-item">
-<a class="note-list-title" href="/open/{{ note.id }}">{{ note.title }}</a>
+<a class="note-list-title" href="/open/{{ note.id }}/notes">{{ note.title }}</a>
   <div class="note-list-links">
     <!-- when we are in the "Pinned" section, offer option to unpin stuff, otherwise allow pinning -->
     {% if unpinnable %}
