--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -495,14 +495,24 @@ form {
 }
 
 .drawerView-note {
-  background: white;
+  background: #dddddd;
   padding: 4px;
+}
+
+.drawerView-note-open {
+    border-top: 4px solid #F18A60;
+    background: white;
+    padding-top: 0;
 }
 
 .drawerView-note:hover .drawerView-title {
   text-decoration: underline 2px;
   text-decoration-color: #F18A60;
   font-weight: bold;
+}
+
+.drawerView-note:hover {
+  background: white;
 }
 
 .drawerView-note:hover .drawerView-body {
@@ -521,7 +531,7 @@ form {
   justify-content: space-around;
 }
 
-.drawerView-note-open {
-    border-top: 4px solid #F18A60;
-    background: #eee;
+
+.drawerView-link {
+  text-decoration: none;
 }
