--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -360,9 +360,6 @@ form {
   width: 20%;
   min-width: 300px;
   position: relative;
-}
-
-.notes-sidebar {
   padding: 8px;
 }
 
@@ -495,14 +492,16 @@ form {
 }
 
 .drawerView-note {
-  background: #dddddd;
-  padding: 4px;
+  background: #dfdfdf;
+  box-shadow: #111 3px 3px 12px;
+  border-right: 3px solid #555;
+  border-bottom: 3px solid #333;
+  padding: 4px 12px;
 }
 
 .drawerView-note-open {
-    border-top: 4px solid #F18A60;
     background: white;
-    padding-top: 0;
+    background: #fbfbfb;
 }
 
 .drawerView-note:hover .drawerView-title {
@@ -534,4 +533,17 @@ form {
 
 .drawerView-link {
   text-decoration: none;
+}
+
+.drawerView-title-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.dot {
+  height: 12px;
+  width: 12px;
+  background-color: #F18A60;
+  border-radius: 50%;
+  display: inline-block;
 }
