svg broken and shit, revert to img

--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -254,8 +254,30 @@ form {
 }
 
 .connect-sender {
-  font-weight: bold;
-  background-color: orange;
+  background: orange;
+  border-radius: 50%;
+}
+
+.svg-object {
+  position: relative;
+  z-index: -1;
+  width: 25px;
+  padding: 8px;
+}
+
+.svg-small {
+  width: 16px;
+  padding: 0;
+}
+
+.svg-link-wrapper {
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+}
+
+.svg-wrapper {
+  display: inline-block;
 }
 
 .connect-receiver:hover {
@@ -540,6 +562,7 @@ form {
   justify-content: space-between;
   align-items: center;
 }
+
 .dot {
   height: 12px;
   width: 12px;
