--- a/main/templates/widgets/note.html
+++ b/main/templates/widgets/note.html
@@ -33,20 +33,40 @@
     <div class="note-bottombar">
       <p class="note-drawer">{{ parentnote.drawer }}</p>
       <div class="note-buttons">
-        <a href="/pin/{{parentnote.id}}" class=""><img src="static/ico/tag.svg" alt="Pin" class="icon"></a>
+        <a href="/pin/{{parentnote.id}}" class="svg-link-wrapper">
+          <object class="svg-object" data="static/ico/tag.svg" type="image/svg+xml"></object>
+        </a>
         {% if sender %}
           {% if parentnote.id == sender %}
-            <a href="/notes" class="connect-sender"><img src="static/ico/link.svg" alt="Connect" class="icon"></a>
-            {% else %}
-          <a href="/notes/{{sender}}/{{ parentnote.id }}" class="connect-receiver"><img src="static/ico/link.svg" alt="Connect" class="icon"></a>
+            <a href="/notes/deactiveConnectionMode" class="svg-link-wrapper">
+              <span class="svg-wrapper">
+                <object class="connect-sender svg-object" data="static/ico/link.svg" type="image/svg+xml"></object>
+              </span>
+            </a>
+          {% else %}
+            <a href="/notes/r/{{ parentnote.id }}" class="svg-link-wrapper">
+              <span class="svg-wrapper">
+              <object class="connect-receiver svg-object" data="static/ico/link.svg" type="image/svg+xml"></object>
+            </span>
+            </a>
           {% endif %}
         {% else %}
-          <a href="/notes/{{parentnote.id}}" class=""><img src="static/ico/link.svg" alt="Connect" class="icon"></a>
+          <a href="/notes/s/{{parentnote.id}}" class="svg-link-wrapper">
+            <span class="svg-wrapper">
+            <object class="svg-object" data="static/ico/link.svg" type="image/svg+xml"></object>
+          </span>
+          </a>
         {% endif %}
-        <a href="/delete/{{parentnote.id}}" class="p-2 shadow" class="ml-2" onclick="return confirm('Delete this note?')">
-          <img src="static/ico/trash-2.svg" alt="Delete" class="icon">
+        <a href="/delete/{{parentnote.id}}" class="svg-link-wrapper" onclick="return confirm('Delete this note?')">
+          <span class="svg-wrapper">
+          <object class="svg-object" data="static/ico/trash-2.svg" type="image/svg+xml"></object>
+        </span>
         </a>
-        <a href="/editMode/{{parentnote.id}}/true" class="p-2 shadow" class="ml-2"><img src="static/ico/edit.svg" alt="Edit" class="icon"></a>
+        <a href="/editMode/{{parentnote.id}}/true" class="svg-link-wrapper">
+          <span class="svg-wrapper">
+          <object class="svg-object" data="static/ico/edit.svg" type="image/svg+xml"></object>
+        </span>
+        </a>
       </div>
     </div>
     {% endif %}
