--- a/main/templates/widgets/noteTitle.html
+++ b/main/templates/widgets/noteTitle.html
@@ -9,13 +9,13 @@
   {% if unpinnable %}
   <a href="/unpin/{{note.id}}" class="svg-link-wrapper">
     <span class="svg-wrapper">
-    <object class="svg-object svg-small" data="{% static '/ico/x-circle.svg' %}" type="image/svg+xml"></object>
+    <img src="static/ico/x-circle.svg" alt="Remove" class="icon title-icon">
     </span>
   </a>
   {% else %}
   <a href="/pin/{{note.id}}" class="svg-link-wrapper">
     <span class="svg-wrapper">
-    <object class="svg-object svg-small" data="{% static 'static/ico/tag.svg' %}" type="image/svg+xml"></object>
+    <img src="static/ico/tag.svg" alt="Pin" class="icon title-icon">
     </span>
   </a>
   {% endif %}
@@ -25,7 +25,7 @@
     {% if parentnote.id == sender %}
       <a href="/notes/deactiveConnectionMode" class="svg-link-wrapper">
         <span class="svg-wrapper">
-          <object class="connect-sender svg-object svg-small" data="static/ico/link.svg" type="image/svg+xml"></object>
+          <img src="static/ico/link.svg" alt="Connect" class="icon title-icon">
         </span>
       </a>
     {% else %}
