--- a/main/templates/pages/about.html
+++ b/main/templates/pages/about.html
@@ -25,11 +25,11 @@
 
   </article>
 
-  <article class="note">
+  <article class="note" id="note-pricing">
     <h2 class="note-title">Pricing</h2>
     <div class="note-content">
-      <p>The Beta is currently free.</p>
-      <p>On official release, we will move to monthly payment model of $4/month. <br>You may download your notes at any time. We will never hold your data hostage.</p>
+      <p>You can use all features as long as you want in test mode. However, all data is saved on your local device and may not be preserved when you close your internet browser or turn your device off.</p>
+      <p>At any time, you can move to a permanent account for just <span class="orange">$3/month</span>. <br>You may download your notes (test mode or not) at any time. We will never hold your data hostage.</p>
     </div>
   </article>
 
