--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -7,6 +7,8 @@ html, body, main {
   padding: 0;
   margin: 0;
   font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1em;
+  line-height: 1.6em;
 }
 
 h1, h2, form label {
@@ -51,6 +53,13 @@ pre {
 
 pre code {
   padding: 0;
+}
+
+blockquote {
+  border-left: 5px solid #eee;
+  padding-left: 12px;
+  margin-left: 0;
+  margin-bottom: 0;
 }
 
 .nav-header {
