--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -265,7 +265,7 @@ form {
   border-radius: 50%;
 }
 
-.svg-link-wrapper {
+.icon-link {
   display: inline-block;
   position: relative;
   z-index: 1;
