--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -67,6 +67,12 @@ blockquote {
   border-bottom: 1px solid #333;
 }
 
+#user {
+  display: flex;
+  align-items: center;
+  margin-top: 6px;
+}
+
 .links-footer {
   list-style: none;
   padding: 6px 0;
@@ -116,6 +122,8 @@ form {
 .note-title{
   /* box-shadow: inset 0 0 4px #bbb; */
   margin: 0;
+  line-height: .9rem;
+  font-size: .9rem;
 }
 
 .single-note-title {
@@ -274,12 +282,6 @@ form {
   border-radius: 50%;
 }
 
-.svg-link-wrapper {
-  display: inline-block;
-  position: relative;
-  z-index: 1;
-}
-
 
 
 .note-content h1 {
@@ -406,6 +408,11 @@ form {
   text-decoration: none;
 }
 
+.icon-link {
+  height: 20px;
+  text-decoration: none;
+}
+
 .icon {
   padding: 2px;
   height: 16px;
@@ -422,7 +429,6 @@ form {
 
 .title-icon {
   height: 24px;
-  padding: 6px;
 }
 
 .slogan {
