--- a/main/templates/boilerplate/base.html
+++ b/main/templates/boilerplate/base.html
@@ -17,10 +17,13 @@
 
   {% block sidebar %}
   {% endblock sidebar %}
-  
+
   <div class="content">
     {% block content %}
     {% endblock content %}
   </div>
+  <script>
+    0
+  </script>
 </body>
 </html>
