--- a/main/templates/notes.html
+++ b/main/templates/notes.html
@@ -2,17 +2,17 @@
 {% load i18n lazysignup_tags %}
 
 {% block sidebar %}
-
+{% load static %}
 {% if sidebarCollapsed %}
 <div id="sidebar-hint">
   <a href="/sidebar">
-    <img src="static/ico/sm-arrow-circle-right.svg" alt="User" class="sidebar-manager" id="sidebar-collapse">
+    <img src="{% static '/ico/sm-arrow-circle-right.svg' %}" alt="User" class="sidebar-manager" id="sidebar-collapse">
   </a>
 </div>
 {% else %}
 <div id="sidebar">
   <a href="/sidebar">
-    <img src="static/ico/sm-arrow-circle-left.svg" alt="User" class="sidebar-manager" id="sidebar-collapse">
+    <img src="{% static 'ico/sm-arrow-circle-left.svg' %}" alt="User" class="sidebar-manager" id="sidebar-collapse">
   </a>
 
 
@@ -21,7 +21,7 @@
     <nav class="nav-header">
       <li id="user">
         {% if user.is_authenticated %}
-        <img src="static/ico/user.svg" alt="User" class="icon title-icon">
+        <img src="{% static '/ico/user.svg' %}" alt="User" class="icon title-icon">
         {% if not user|is_lazy_user %}
         <a href="/profile">{{ user.username }}</a> (<a href="{% url 'logout' %}">logout</a>)
         {% else %}
