--- a/main/templates/payment.html
+++ b/main/templates/payment.html
@@ -1,6 +1,6 @@
 <script src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript">
-  var stripe = Stripe('pk_test_CBM7HhIYdjePmccQsSqDHpxZ00eBDyU9YD');
+  var stripe = Stripe('{{stripe_pk}}');
   stripe.redirectToCheckout({
     // Make the id field from the Checkout Session creation API response
     // available to this file, so you can provide it as parameter here
