get to the stripe checkout form, fill it, and get to success/cancel pages afterwards

--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -67,6 +67,13 @@ blockquote {
   border-bottom: 1px solid #333;
 }
 
+.button-as-link {
+  background: none;
+  border: none;
+
+  cursor: pointer;
+}
+
 #user {
   display: flex;
   align-items: center;
