fix the signup flow when temporary user is converted

--- a/main/templates/pages/settings.html
+++ b/main/templates/pages/settings.html
@@ -31,9 +31,8 @@
   <div class="note">
     <h2>Account & Payment</h2>
     <ul>
-      <li>Stripe ID: {{ stripe_id }}</li>
       <li>Stripe Email: {{ stripe_email }} </li>
-      <li>Subscription: {{ subscription }}</li>
+      <li>Subscription: {{ subscription_status }}</li>
     </ul>
 
   </div>
