--- a/main/templates/pages/signup.html
+++ b/main/templates/pages/signup.html
@@ -9,7 +9,8 @@
   <form method="post">
     {% csrf_token %}
     {{ form }}
-    <button type="submit" class="button-primary">Save & continue to payment</button>
+    <!-- the redirect is only relevant if we are converting a user -->
+    <button type="submit" class="button-primary"  name="redirect_to" value="/payment_form">Save & continue to payment</button>
   </form>
 
 </div>
