fix some buttons and abstract away settings

--- a/main/templates/pages/index.html
+++ b/main/templates/pages/index.html
@@ -22,13 +22,10 @@
     </div>
   </div>
 
-  <button class="index-font button-as-link" id="submitBtn" type="submit"><h2>...or sign up first ($3/month)</h2></button>
-
+<a class="index-font" href="/signup">...or sign up first ($3/month)</a>
 
 </main>
 
 {% load static %}
-<script src="https://js.stripe.com/v3/"></script>
-<script src="{% static "js/stripe.js" %}"></script>
 
 {% endblock content %}
