--- a/main/templates/drawerView.html
+++ b/main/templates/drawerView.html
@@ -35,6 +35,8 @@
     <nav class="flex-around">
       <a href="/notes">Desk</a>
       <a href="/drawerView">Drawer</a>
+      <a href="/learning">Learn</a>
+      
     </nav>
   </header>
   <div id="notes-sections">
