--- a/main/templates/notes.html
+++ b/main/templates/notes.html
@@ -38,6 +38,7 @@
     <nav class="flex-around">
       <a href="/notes">Desk</a>
       <a href="/drawerView">Drawer</a>
+      <a href="/learning">Learn</a>
     </nav>
   </header>
   <div id="notes-sections">
