basic learning queue working

--- a/main/templates/learning/queue.html
+++ b/main/templates/learning/queue.html
@@ -68,6 +68,7 @@
 {% endif %}
 <div class="note">
   {% include 'widgets/note.html' with parentnote=note %}
+  <a href="learning/delete/{{note.learning_data.id}}">Remove Note from learning rotation</a>
 </div>
 
 <div class="note">
