--- a/main/templates/learning/queue.html
+++ b/main/templates/learning/queue.html
@@ -66,58 +66,79 @@
   To make an account and permanently save your notes, <a href="/convert">click here</a> ($3/month)
 </div>
 {% endif %}
-<div class="note">
-  <p>Due: {% if note.learning_data.review_date %}{{ note.learning_data.review_date|date:"Y/m/d"  }}{% else %}Not yet set{% endif %}</p>
-  {% include 'widgets/note.html' with parentnote=note %}
-  <a href="learning/delete/{{note.learning_data.id}}">Remove Note from learning rotation</a>
-</div>
 
-<div class="note">
-  <form action="" method="post" class="">
-    {% csrf_token %}
-    {{ form }}
-    <input type="hidden"  id="note-id" name="note-id" value="{{note.id}}">
-    <div class="form-buttons" id="quality-rating">
+<div id="learning-grid">
 
-      <span>
-        <input type="radio" name="easiness" id="0" value="0" checked="checked">
-        <label for="0">Complete blackout</label>
-      </span>
+  <div class="note">
+    <p>Due: {% if note.learning_data.review_date %}{{ note.learning_data.review_date|date:"Y/m/d"  }}{% else %}Not yet set{% endif %}</p>
 
-      <span>
-        <input type="radio" name="easiness" id="1" value="1">
-        <label for="1">Incorrect, correct one remembered</label>
-      </span>
-
-      <span>
-        <input type="radio" name="easiness" id="2" value="2">
-        <label for="2">Incorrect, correct one easily recalled</label>
-      </span>
-
-      <span>
-        <input type="radio" name="easiness" id="3" value="3">
-        <label for="3">Correct with serious difficulty</label>
-      </span>
-
-      <span>
-        <input type="radio" name="easiness" id="4" value="4">
-        <label for="4">Correct after hesistation</label>
-      </span>
-
-      <span>
-        <input type="radio" name="easiness" id="5" value="5">
-        <label for="5">Perfect Response</label>
-      </span>
-
+    <div class="note-topbar">
+      <h2 class="single-note-title">{{ title }}</h2>
+      <span></span>
     </div>
-    <p>
-      {% if not has_learning_items_left %}
-      You are out of notes to learn today. You are currently learning notes that would be due on a future day.
-      {% endif %}
-    </p>
-    <button type="submit" value="Submit" class="button-primary form-submit">Submit & Next</button>
 
-  </form>
+    {% load markdown %}
+
+    <div class="note-content">{{ front_site|markdown|safe}}</div>
+
+
+    <a href="learning/delete/{{note.learning_data.id}}">Remove Note from learning rotation</a>
+  </div>
+
+  <div class="note" {% if not show_backsite %} id="note-backsite"{% endif %}>
+    {% if show_backsite %}
+    <div class="note-content">{{ back_site|markdown|safe}}</div>
+    {% else %}
+    <a href="/learning/show_backsite">Show Answer</a>
+    {% endif %}
+  </div>
+
+
+  <div class="note" id="learning-rating-wrapper">
+    <form action="" method="post" class="">
+      {% csrf_token %}
+      {{ form }}
+      <input type="hidden"  id="note-id" name="note-id" value="{{note.id}}">
+      <div class="form-buttons" id="quality-rating">
+
+        <span>
+          <input type="radio" name="easiness" id="0" value="0" checked="checked">
+          <label for="0">Complete blackout</label>
+        </span>
+
+        <span>
+          <input type="radio" name="easiness" id="1" value="1">
+          <label for="1">Incorrect, correct one remembered</label>
+        </span>
+
+        <span>
+          <input type="radio" name="easiness" id="2" value="2">
+          <label for="2">Incorrect, correct one easily recalled</label>
+        </span>
+
+        <span>
+          <input type="radio" name="easiness" id="3" value="3">
+          <label for="3">Correct with serious difficulty</label>
+        </span>
+
+        <span>
+          <input type="radio" name="easiness" id="4" value="4">
+          <label for="4">Correct after hesistation</label>
+        </span>
+
+        <span>
+          <input type="radio" name="easiness" id="5" value="5">
+          <label for="5">Perfect Response</label>
+        </span>
+
+      </div>
+
+      <button type="submit" value="Submit" class="button-primary form-submit">Submit & Next</button>
+
+    </form>
+  </div>
+
+
 </div>
 
 
